Create the PDF with the print pipeline

--- a/packages/website/src/pages/resume/_index.mdx
+++ b/packages/website/src/pages/resume/_index.mdx
@@ -24,3 +24,7 @@ All the code I write outside of work, and most of what I write at work, is
 free/_libre_, free/_gratis_ and open-source software. {
 	githubUrl && <Fragment>You can find all of it on my <Link url={githubUrl}>GitHub profile</Link>.</Fragment>
 }
+
+If you like what you see here and want to work with me, you can grab the
+<a href={import.meta.env.DEV ? '/resume/pdf' : '/resume.pdf'}>PDF version</a>
+of this résumé. Print responsibly.
