Use `Link` component over `a` tag

--- a/packages/website/src/pages/resume/_index.mdx
+++ b/packages/website/src/pages/resume/_index.mdx
@@ -26,5 +26,5 @@ free/_libre_, free/_gratis_ and open-source software. {
 }
 
 If you like what you see here and want to work with me, you can grab the
-<a href={import.meta.env.DEV ? '/resume/pdf' : '/resume.pdf'}>PDF version</a>
+<Link url={import.meta.env.DEV ? '/resume/pdf' : '/resume.pdf'}>PDF version</Link>
 of this résumé. Print responsibly.
