Add RSS feed and update writings index

--- a/packages/website/src/pages/writings/_index.mdx
+++ b/packages/website/src/pages/writings/_index.mdx
@@ -12,4 +12,5 @@ Welcome to my blog/digital garden. This is my attempt to force myself to write
 more regularly. I'll document my experiences in building software, and learning
 new things along the way.
 
-If you like what you read here, please [let me know](/)!
+If you like what you read here, please [let me know](/)! You can subscribe to
+the [RSS feed](/rss.xml) to get updates on new posts.
