Include the RSS icon

--- a/packages/website/src/pages/writings/_index.mdx
+++ b/packages/website/src/pages/writings/_index.mdx
@@ -6,6 +6,8 @@ description: Read entries in my digital garden about my experiences in building 
 index: 1
 ---
 
+import Icon from '@/components/Icon.astro'
+
 # Writings
 
 Welcome to my blog/digital garden. This is my attempt to force myself to write
@@ -13,4 +15,5 @@ more regularly. I'll document my experiences in building software, and learning
 new things along the way.
 
 If you like what you read here, please [let me know](/)! You can subscribe to
-the [RSS feed](/rss.xml) to get updates on new posts.
+the [<Icon source="lucide" name="rss"/> RSS feed](/rss.xml) to get updates on
+new posts.
