Drop `repoUrl` from site store

--- a/src/pages/colophon.mdx
+++ b/src/pages/colophon.mdx
@@ -14,9 +14,9 @@ import { site } from '@/stores/site'
 
 I designed and built this site myself. As with my other projects, this site is
 free/_libre_, free/_gratis_ and open-source software, with the
-<Link url={site.repoUrl}>source code</Link> available on GitHub to use
-as you like. Except steal and claim as your own, because that would not be a
-nice thing to do.
+<Link url="https://github.com/dhruvkb/portfolio">source code</Link> available on
+GitHub to use as you like. Except steal and claim as your own, because that
+would not be a nice thing to do.
 
 Apart from this colophon, you might also find interesting [writing](/writings)
 related to this site under the "portfolio" tag.
