--- a/src/pages/now.mdx
+++ b/src/pages/now.mdx
@@ -55,5 +55,5 @@ past, and the foreseeable future.
 ---
 
 You can see
-<Link url={`${site.repoUrl}/commits/main/packages/website/src/pages/now.mdx`}>previous versions</Link>
+<Link url="https://github.com/dhruvkb/portfolio/commits/main/packages/website/src/pages/now.mdx">previous versions</Link>
 of this page on GitHub.
