Fix Récivi link in colophon and link to résumé data file

--- a/src/pages/colophon.mdx
+++ b/src/pages/colophon.mdx
@@ -78,12 +78,11 @@ static pages.
 - [GoatCounter](https://goatcounter.com) provides privacy-friendly metrics
   without adding too much bloat. Data is only retained for 31 days. You can opt
   out by disabling JavaScript in your browser.
-- My [interactive résumé](/resume/) and some other parts of the site generated
-  from a JSON file using [Récivi](https://recivi.vercel.app), a personal
-  endeavour to create a new kind of résumé for computers.
+- My [interactive résumé](/resume/) and some other parts of the site are
+  generated from a [JSON file](https://github.com/dhruvkb/recivi) using
+  [Récivi](https://recivi.pages.dev), a personal endeavour to create a new kind
+  of résumé for computers and humans, in that order.
 - The only external requests this site makes are to
   [Rasmus' site](https://rsms.me) for Inter,
   [Goat Counter](https://goatcounter.com) for analytics and
   [Google Fonts](https://) for Spectral (only on the résumé PDF page).
-
-{/* TODO: Add link to Récivi JSON file. */}
