Fix typo in "fairly"

--- a/src/pages/now.mdx
+++ b/src/pages/now.mdx
@@ -35,7 +35,7 @@ past, and the foreseeable future.
 
 ## Learning
 
-- How to lead a team. I'm faily new to the leadership thing and I want to do a
+- How to lead a team. I'm fairly new to the leadership thing and I want to do a
   really good job of representing my team. Thankfully I have coaching and
   training sessions to help.
 - Rust, a fantastic language, with so many good decisions, that absolutely
