Fix typos and implement consistently wrapping

--- a/src/pages/uses.mdx
+++ b/src/pages/uses.mdx
@@ -23,13 +23,13 @@ For my desk and chair, I had a combined budget of 2k USD.
   [IKEA Idåsen](https://www.ikea.com/ae/en/p/idasen-desk-sit-stand-black-dark-grey-s89280993/)
   sit/stand desk because it was easily available in Dubai, had an excellent 10
   year warranty and fit neatly under my budget. I use
-  [Linak controller](https://github.com/rhyst/linak-controller) to move the desk using
-  Raycast scripts.
+  [Linak controller](https://github.com/rhyst/linak-controller) to move the desk
+  using Raycast scripts.
 
 - **Chair:** After a lot of deliberation, I chose the remastered
   [Herman Miller Aeron](https://www.hermanmiller.com/products/seating/office-chairs/aeron-chair/)
-  chair because it had glorious reviews as one of the finest ergonomic chairs. If I do
-  over, I'd probably go with the Herman Miller Embody chair.
+  chair because it had glorious reviews as one of the finest ergonomic chairs.
+  If I could do over, I'd probably go with the Herman Miller Embody chair.
 
 - **Organisation:** For organising my workspace, I set up an
   [IKEA Skådis](https://www.ikea.com/ae/en/p/skadis-pegboard-white-10321618/)
@@ -39,8 +39,9 @@ For my desk and chair, I had a combined budget of 2k USD.
 
 - **Lighting:** I have an
   [IKEA Tertial](https://www.ikea.com/ae/en/p/tertial-work-lamp-dark-grey-40450802/)
-  lamp mounted to an edge of the desk. It makes for excellent focused lighting when it's
-  dark, and I can rotate it backwards to use as soft wall lighting when needed.
+  lamp mounted to an edge of the desk. It makes for excellent focused lighting
+  when it's dark, and I can rotate it backwards to use as soft wall lighting
+  when needed.
 
 I'll share a picture once my desk's cleaned up. Don't hold your breath though,
 it could take quite a while to make the desk look good.
