Expand more on next keyboard and why I switched to VS Code

--- a/src/pages/uses.mdx
+++ b/src/pages/uses.mdx
@@ -67,7 +67,30 @@ it could take quite a while to make the desk look good.
   got myself a
   [Keychron K2 v2](https://www.keychron.com/products/keychron-k2-wireless-mechanical-keyboard)
   with Brown switches. It's been great but now the keycaps are wearing out and
-  the battery doesn't last very long so I'm on the lookout for a replacement.
+  the battery doesn't last very long so I'm on the lookout for a replacement. These are
+  the things I'm looking for in the next keyboard:
+
+  - Wireless (good battery life)
+  - USB-C port
+  - Mechanical
+  - Backlit
+  - Mac support (in layout and keycaps)
+  - 75%/80% layout
+  - Great sound
+  - Not too expensive
+
+  These are things that would be nice to have but can I skip when the budget is
+  constrained:
+
+  - 2.4 GHz support
+  - Small display
+  - Volume Knob
+  - Caps lock indicator
+  - Hot-swappable switches
+
+  If I could go all out, I'd probably get a split keyboard from ZSA, but they
+  are way too expensive for me right now. To avoid overspending, I've decided to
+  restrict myself to a budget of approximately 150 USD.
 
 - **Webcam:** I use my
   [Apple iPhone 13 Pro](https://www.apple.com/ae/iphone/compare/?modelList=iphone-13-pro)
@@ -102,7 +125,18 @@ software to get work done.
 - **IDE/Editor:**
   - I now use [VS Code](https://code.visualstudio.com/) because JetBrains IDEs
     were being buggy, moving slowly and lagging in features. I also feel better
-    about using an open-source editor.
+    about using an open-source editor. Here are some of the features that I feel
+    JetBrains IDEs are lacking:
+
+    - stylistic sets in fonts
+    - multi-folder workspaces
+    - workspace-specific extensions
+    - workspace-specific settings (that can be tracked by VCS)
+    - wide glyphs in the terminal
+
+    JetBrains IDEs were also frequently crashing and reporting the wrong Git
+    diffs. Eventually these small glitches became too much to bear.
+
   - In the terminal, I use [Helix](https://helix-editor.com/) as my `$EDITOR`.
     It feels like the spiritual successor to `vim` but with a few key better
     design choices.
