Update text in the colophon

--- a/src/pages/colophon.mdx
+++ b/src/pages/colophon.mdx
@@ -12,14 +12,19 @@ import { site } from '@/stores/site'
 
 # Colophon
 
-I designed and built this site myself. As with my other projects, this site is
-free/_libre_, free/_gratis_ and open-source software, with the
+As with my other projects, this site is free/_libre_, free/_gratis_ and
+open-source software, with the
 <Link url="https://github.com/dhruvkb/portfolio">source code</Link> available on
 GitHub to use as you like. Except steal and claim as your own, because that
 would not be a nice thing to do.
 
 Apart from this colophon, you might also find interesting [writing](/writings)
 related to this site under the "portfolio" tag.
+
+## Creator
+
+Unless otherwise noted, everything here was conceived, created, designed,
+developed, drawn or written by yours truly.
 
 ## Ideology
 
